[package]
name = "stackful-coroutine-demo"
version = "0.1.0"
edition = "2021"

# must run with a x86 target, such as `--target i686-unknown-linux-gnu`
[[bin]]
name = "reimplement"

[dependencies]
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
